# convert-qc-flags

./: LICENSE.txt  README.md  pyproject.toml
src/convert_qc_flags/: __about__.py  __init__.py  convert_qc_flags.py
tests/: __init__.py
